--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  margin: 2em;
+  margin: 0;
 }
 
-h1 {
-  font-style: italic;
-  color: #373fff;
+canvas {
+  width: 800px;
+  height: 800px;
 }
