🌼🔔 Checkpoint ./script.js:378534/296 ./style.css:378534/101

--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 0;
-  background-color: #eee;
+  background-color: #eeee;
 }
 
 canvas {
-
+  width: 900px;
+  height: 500px;
 }
