--- a/style.css
+++ b/style.css
@@ -3,5 +3,10 @@
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 0;
+  background-color: #111;
 }
 
+canvas {
+  width: 100vw;
+  height: 100vh;
+}
